2009-08-10  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: use SSL_OP_NO_TICKET to work with old servers.

2009-08-05  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc, buffer.h: (Dump) new method.
	* Torrent.cc, Torrent.h: (ScanPeers) new method; add key, ip params;
	  add --force-valid option to skip validating; add seed-min-peers
	  parameter; better debug messages.

2009-08-04  Alexander V. Lukyanov <lav@yars.free.net>

	* Speedometer.cc, Speedometer.h: (GetStr) return "" when not valid.

2009-07-29  Jeroen Roovers <jer@gentoo.org>

	* Makefile.am: link cmd-torrent with liblftp-network.

2009-07-28  Alexander V. Lukyanov <lav@yars.free.net>

	* RateLimit.cc, RateLimit.h: (Relaxed) new method.

2009-07-24  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: fixed Put for large blocks with translation, make
	  scheduler run after putting some data into the buffer.

2009-07-23  Alexander V. Lukyanov <lav@yars.free.net>

	* xmap.h: fixed xmap lookup returning zero.
	* xmap.cc: fixed hash_size calculation.
	* Speedometer.cc: speed-optimize by skipping Valid call.

2009-07-21  Alexander V. Lukyanov <lav@yars.free.net>

	* xmap.h: (lookup_Lv) new method; make lookup const.
	* commands.cc: add short desc for torrent.
	* lftp.cc: send signal to jobs.
	* network.cc, network.cc: (SocketAccept) new method; move NonBlock and CloseOnExec here.
	* FileAccess.cc, FileAccess.h: ... from here.
	* ftpclass.cc: use SocketAccept and SocketCreateTCP.
	* Torrent.cc: use SocketAccept.

2009-07-17  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc, CmdExec.cc, CmdExec.h: (static_cmd_table_length) new const; use it;
	  fixed core dump on help command (reported by Ganael LAPLANCHE <ganael.laplanche@martymac.com>).
	  (torrent) new command.
	* ProtoLog.cc, ProtoLog.h: new class.
	* FileAccess.cc, FileAccess.h: use ProtoLog; assume "file" protocol
	  by default.
	* Http.cc: strip interface name from hostname for ipv6.
	* Job.cc: (Kill) try a signal first.